bk_ida/gccida/c2/oprs_not_set_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3256:4: error: expected ';' after expression
rtx v5; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3256:5: error: use of undeclared identifier 'v5'
rtx v5; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3279:1: error: use of undeclared identifier 'v5'
v5 = modify_mem_list[*( int *)( basic_block_for_insn->data.l[rtint] + 88)]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3280:6: error: use of undeclared identifier 'v5'
if ( v5 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3282:6: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
v6 = uid_cuid_1; 
     ^~~~~~~~~~
     uid_cuid
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3283:20: error: use of undeclared identifier 'uid_cuid_1'
v7 = *( ( _DWORD *)uid_cuid_1 + rtint); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3286:23: error: use of undeclared identifier 'v5'
v8.rtwint = ( __int64)v5->fld[0]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3294:22: error: expected expression
note_stores( *( rtx *)( v8.rtwint + 32), mems_conflict_for_gcse_p, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3298:1: error: use of undeclared identifier 'v5'
v5 = ( rtx)v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3299:7: error: use of undeclared identifier 'v5'
if ( !v5 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3301:6: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
v6 = uid_cuid_1; 
     ^~~~~~~~~~
     uid_cuid
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3328:32: error: expected expression
v9 = oprs_not_set_p( *( ( rtx *)rtx + v14), insn); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/gcse.c:3343:33: error: expected expression
while ( oprs_not_set_p( *( rtx *)&v16[2 * v17 + 2], insn) ) 
                                ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/oprs_not_set_p/src/obj/gcse.o] Error 1
